syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest{
  int32 first_arg = 1;
  int32 second_arg = 2;
}

message SumResponse{
  int32 result = 1;
}